--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,234 +1,230 @@
-/*
-@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600;700&display=swap");
 
 :root {
-    --color-body: black;
-    --color-heading: rgb(249, 249, 249);
-    --color-base: rgb(138, 47, 195);
-    --color-base2:  #1a1717;
-    --color-brand: #fbfbfb;
-    --color-brand2: #1336ab;
-    --sidbar-width: 240px;
-    --font-base: "Bai Jamjuree";
+  --color-body: black;
+  --color-heading: rgb(249, 249, 249);
+  --color-base: rgb(138, 47, 195);
+  --color-base2: #1a1717;
+  --color-brand: #fbfbfb;
+  --color-brand2: #1336ab;
+  --sidbar-width: 240px;
+  --font-base: "Bai Jamjuree";
 }
 
 body {
-    background-color: var(--color-base2);
-    color: var(--color-heading);
-    font-family: var(--font-base), sans-serif;
+  background-color: var(--color-base2);
+  color: var(--color-heading);
+  font-family: var(--font-base), sans-serif;
 }
 
-h1,h2,h3,h4,h5,h6 {
-    color: var(--color-heading);
-    font-weight: 700;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--color-heading);
+  font-weight: 700;
 }
 
 a {
-    text-decoration: none;
-    color: white;
-    transition: all 0.4s ease;
+  text-decoration: none;
+  color: white;
+  transition: all 0.4s ease;
 }
 
 a:hover {
-    color: pink;
+  color: pink;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
 .text-brand {
-    color: var(--color-brand);
+  color: var(--color-brand);
 }
 
 .bg-base {
-    background-color: var(--color-base);
+  background-color: var(--color-base);
 }
 
 .full-height {
-    min-height: 100vh;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    border-bottom: 2px solid rgba(255,255,255, 0.1);
+  min-height: 100vh;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.1);
 }
 
 .shadow-effect {
-    transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .shadow-effect:hover {
-    box-shadow: -6px 6px 0 0 var(--color-brand);
+  box-shadow: -6px 6px 0 0 var(--color-brand);
 }
 
 .iconbox {
-    width: 60px;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 32px;
-    background-color: var(--color-brand);
-    color: var(--color-base);
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 32px;
+  background-color: var(--color-brand);
+  color: var(--color-base);
 }
 
- NAVBAR 
-.navbar {
-    background-color:  rgb(6,0,35);
+NAVBAR .navbar {
+  background-color: rgb(6, 0, 35);
 }
 
 .navbar .nav-link {
-    font-weight: 700;
-    text-transform: uppercase;
-    color: #fff;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #fff;
 }
 
 .navbar .nav-link:hover {
-    color: var(--color-brand);
+  color: var(--color-brand);
 }
 
 .navbar .nav-link.active {
-    color: var(--color-brand);
+  color: var(--color-brand);
 }
 
 @media (min-width: 992px) {
-    .navbar {
-        min-height: 100vh;
-        width: var(--sidbar-width);
-        background: linear-gradient(rgba(32, 74, 79, 0.8), rgba(136, 102, 17, 0.8)), url(../images/sidebarimg.jpg);
-        background-size: cover;
-        background-position: center;
-    }
+  .navbar {
+    min-height: 100vh;
+    width: var(--sidbar-width);
+    background: linear-gradient(rgba(32, 74, 79, 0.8), rgba(136, 102, 17, 0.8)),
+      url(../images/sidebarimg.jpg);
+    background-size: cover;
+    background-position: center;
+  }
 
-    .navbar-brand img {
-        border: 8px solid var(--color-brand);
-    }
+  .navbar-brand img {
+    border: 8px solid var(--color-brand);
+  }
 
- CONTENT WRAPPER 
-    #content-wrapper {
-        padding-left: var(--sidbar-width);
-    }
+  CONTENT WRAPPER #content-wrapper {
+    padding-left: var(--sidbar-width);
+  }
 }
 
- BTN 
-.btn {
-    padding: 12px 28px;
-    font-weight: 700;
+BTN .btn {
+  padding: 12px 28px;
+  font-weight: 700;
 }
 
 .btn-brand {
-    background-color: var(--color-brand);
-    border-color: var(--color-brand);
-    color: var(--color-base);
+  background-color: var(--color-brand);
+  border-color: var(--color-brand);
+  color: var(--color-base);
 }
 
 .btn-brand:hover,
 .btn-brand:focus {
-    background-color: #d8bcab;
-    color: #251605;
-    border-color: var(--color-brand2);
+  background-color: #d8bcab;
+  color: #251605;
+  border-color: var(--color-brand2);
 }
 
 .link-custom {
-    font-weight: 700;
-    position: relative;
+  font-weight: 700;
+  position: relative;
 }
 
 .link-custom::after {
-    content: "";
-    width: 0%;
-    height: 2px;
-    background-color: var(--color-brand);
-    position: absolute;
-    left: 0;
-    top: 110%;
-    transition: all 0.4s;
+  content: "";
+  width: 0%;
+  height: 2px;
+  background-color: var(--color-brand);
+  position: absolute;
+  left: 0;
+  top: 110%;
+  transition: all 0.4s;
 }
 
 .link-custom:hover::after {
-    width: 100%;
+  width: 100%;
 }
 
- CARD 
-.card-custom .card-custom-image {
-    overflow: hidden;
+CARD .card-custom .card-custom-image {
+  overflow: hidden;
 }
 
 .card-custom .card-custom-image img {
-    transition: all 0.4s ease;
+  transition: all 0.4s ease;
 }
 
 .card-custom:hover .card-custom-image img {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
- CONTACT 
-#contact .form-control {
-    background-color: var(--color-base);
-    border-color: var(--color-base);
-    color: var(--color-body);
+CONTACT #contact .form-control {
+  background-color: var(--color-base);
+  border-color: var(--color-base);
+  color: var(--color-body);
 }
 
 #contact .form-control:focus {
-    border-color: var(--color-brand);
-    box-shadow: none;
+  border-color: var(--color-brand);
+  box-shadow: none;
 }
 
 #contact .form-control::placeholder {
-    color: var(--color-body);
+  color: var(--color-body);
 }
-s
-#contact input.form-control {
-    height: 44px;
+s #contact input.form-control {
+  height: 44px;
 }
 
- SOCIAL ICONS 
-.social-icons {
-    padding-left: 710px;
-
+SOCIAL ICONS .social-icons {
+  padding-left: 710px;
 }
 
 .social-icons a {
-    width: 40px;
-    height: 40px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--color-base);
-    border-radius: 100px;
-    font-size: 24px;
-    padding-left: 710px;
+  width: 40px;
+  height: 40px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-base);
+  border-radius: 100px;
+  font-size: 24px;
+  padding-left: 710px;
 }
 
 @media (max-width: 768px) {
-    .social-icons {
-        flex-wrap: wrap;
-        justify-content: flex-start;
-        align-items: center;
-        padding-left: 300px;
-    }
-    
-    .social-icons a {
-        margin-right: 0;
-        padding-left: 300px;
-        margin-bottom: 10px;
-    }
-}
-
-Tesimonials
-.person img {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    margin-right: 10px;
+  .social-icons {
+    flex-wrap: wrap;
+    justify-content: flex-start;
     align-items: center;
-    justify-content: center;
+    padding-left: 300px;
   }
 
- */
+  .social-icons a {
+    margin-right: 0;
+    padding-left: 300px;
+    margin-bottom: 10px;
+  }
+}
+
+Tesimonials .person img {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  margin-right: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+*/
 
 /*404*/
 .about {
@@ -370,324 +366,4 @@ Tesimonials
 
 .about:hover .social.linkedin .icon:hover {
   background-color: #0077b5;
-}
-
-@import url("https://fonts.googleapis.com/css?family=Barlow+Condensed:300,400,500,600,700,800,900|Barlow:300,400,500,600,700,800,900&display=swap");
-
-body {
-  margin: 0;
-  padding: 0;
-  height: auto;
-  font-family: "Barlow", sans-serif;
-  background: #695681;
-}
-
-.logo {
-  position: fixed;
-  z-index: 5;
-  bottom: 10px;
-  right: 10px;
-  width: 40px;
-  height: 40px;
-  border-radius: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: rgba(0, 0, 0, 0.1);
-  border-radius: 100%;
-  backdrop-filter: blur(5px);
-}
-
-.logo img {
-  width: 55%;
-  height: 55%;
-  transform: translateY(-1px);
-  opacity: 0.8;
-}
-
-nav .menu {
-  width: 100%;
-  height: 80px;
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 5%;
-  box-sizing: border-box;
-  z-index: 3;
-}
-
-nav .menu .website_name {
-  color: #695681;
-  font-weight: 600;
-  font-size: 20px;
-  letter-spacing: 1px;
-  background: white;
-  padding: 4px 8px;
-  border-radius: 2px;
-  opacity: 0.5;
-  transition: all 0.4s ease;
-  cursor: pointer;
-}
-
-nav .menu .website_name:hover {
-  opacity: 1;
-}
-
-nav .menu .menu_links {
-  transition: all 0.4s ease;
-  opacity: 0.5;
-}
-
-nav .menu .menu_links:hover {
-  opacity: 1;
-}
-
-nav .menu .menu_links .link {
-  color: white;
-  text-transform: uppercase;
-  font-weight: 500;
-  margin-right: 50px;
-  letter-spacing: 2px;
-  position: relative;
-  transition: all 0.3s 0.2s ease;
-}
-
-nav .menu .menu_links .link:last-child {
-  margin-right: 0;
-}
-
-nav .menu .menu_links .link:before {
-  content: "";
-  position: absolute;
-  width: 0px;
-  height: 4px;
-  background: linear-gradient(90deg, #ffedc0 0%, #ff9d87 100%);
-  bottom: -10px;
-  border-radius: 4px;
-  transition: all 0.4s cubic-bezier(0.82, 0.02, 0.13, 1.26);
-  left: 100%;
-}
-
-nav .menu .menu_links .link:hover {
-  opacity: 1;
-  color: #fb8a8a;
-}
-
-nav .menu .menu_links .link:hover:before {
-  width: 40px;
-  left: 0;
-}
-
-nav .menu .menu_icon {
-  width: 40px;
-  height: 40px;
-  position: relative;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-
-nav .menu .menu_icon .icon {
-  width: 24px;
-  height: 2px;
-  background: white;
-  position: absolute;
-}
-
-nav .menu .menu_icon .icon:before,
-nav .menu .menu_icon .icon:after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  background: inherit;
-  position: absolute;
-  transition: all 0.3s cubic-bezier(0.49, 0.04, 0, 1.55);
-}
-
-nav .menu .menu_icon .icon:before {
-  transform: translateY(-8px);
-}
-
-nav .menu .menu_icon .icon:after {
-  transform: translateY(8px);
-}
-
-nav .menu .menu_icon:hover .icon {
-  background: #ffedc0;
-}
-
-nav .menu .menu_icon:hover .icon:before {
-  transform: translateY(-10px);
-}
-
-nav .menu .menu_icon:hover .icon:after {
-  transform: translateY(10px);
-}
-
-.wrapper {
-  display: grid;
-  grid-template-columns: 1fr;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  overflow-x: hidden;
-}
-
-.wrapper .container {
-  margin: 0 auto;
-  transition: all 0.4s ease;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
-
-.wrapper .container .scene {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  vertical-align: middle;
-}
-
-.wrapper .container .one,
-.wrapper .container .two,
-.wrapper .container .three,
-.wrapper .container .circle,
-.wrapper .container .p404 {
-  width: 60%;
-  height: 60%;
-  top: 20% !important;
-  left: 20% !important;
-  min-width: 400px;
-  min-height: 400px;
-}
-
-.wrapper .container .one .content:before,
-.wrapper .container .two .content:before,
-.wrapper .container .three .content:before {
-  content: "";
-  position: absolute;
-  background-color: rgba(#36184f, 0.3);
-  border-radius: 100%;
-  box-shadow: inset 5px 20px 40px rgba(#36184f, 0.25),
-    inset 5px 0px 5px rgba(#32243e, 0.3), inset 5px 5px 20px rgba(#32243e, 0.25),
-    2px 2px 5px rgba(white, 0.2);
-}
-
-.wrapper .container .one .content {
-  width: 600px;
-  height: 600px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  animation: content 0.8s cubic-bezier(1, 0.06, 0.25, 1) backwards;
-}
-
-.wrapper .container .one .content .piece {
-  background: linear-gradient(90deg, #8077ea 13.7%, #eb73ff 94.65%);
-}
-
-.wrapper .container .two .content .piece {
-  background: linear-gradient(90deg, #ffedc0 0%, #ff9d87 100%);
-}
-
-.wrapper .container .three .content .piece {
-  background: #fb8a8a;
-}
-
-.wrapper .container .text {
-  width: 60%;
-  height: 40%;
-  min-width: 400px;
-  min-height: 500px;
-  position: absolute;
-  margin: 40px 0;
-  animation: text 0.6s 1.8s ease backwards;
-}
-
-.wrapper .container .text article {
-  width: 400px;
-  position: absolute;
-  bottom: 0;
-  z-index: 4;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.wrapper .container .text article p {
-  color: white;
-  font-size: 18px;
-  letter-spacing: 0.6px;
-  margin-bottom: 40px;
-  text-shadow: 6px 6px 10px #32243e;
-}
-
-.wrapper .container .text article button {
-  height: 40px;
-  padding: 0 30px;
-  border-radius: 50px;
-  cursor: pointer;
-  box-shadow: 0px 15px 20px rgba(#36184f, 0.5);
-  z-index: 3;
-  color: #695681;
-  background-color: white;
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: 12px;
-  transition: all 0.3s ease;
-}
-
-.wrapper .container .p404 {
-  font-size: 200px;
-  font-weight: 700;
-  letter-spacing: 4px;
-  color: white;
-  display: flex !important;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  z-index: 2;
-  animation: anime404 0.6s cubic-bezier(0.3, 0.8, 1, 1.05) both;
-  animation-delay: 1.2s;
-}
-
-.wrapper .container .p404:nth-of-type(2) {
-  color: #36184f;
-  z-index: 1;
-  animation-delay: 1s;
-  filter: blur(10px);
-  opacity: 0.8;
-}
-
-.wrapper .container .circle:before {
-  content: "";
-  position: absolute;
-  width: 800px;
-  height: 800px;
-  background-color: rgba(#36184f, 0.2);
-  border-radius: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  box-shadow: inset 5px 20px 40px rgba(#36184f, 0.25),
-    inset 5px 0px 5px rgba(#32243e, 0.3), inset 5px 5px 20px rgba(#32243e, 0.25);
-  animation: circle 0.8s cubic-bezier(1, 0.06, 0.25, 1) backwards;
-}
-
-@media screen and (max-width: 799px) {
-  .about {
-    /* CSS for small screens */
-  }
 }
